manifest/allergy-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: allergy-api-service
spec:
  type: ClusterIP
  selector:
    app: allergy-api
  ports:
    - port: 80
