manifest/allergy-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: allergy-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/Allergy/GetAllergies
        pathType: Prefix
        backend:
          service:
            name: allergy-api-service
            port:
              number: 80
      - path: /api/Allergy/AddAllergy
        pathType: Prefix
        backend:
          service:
            name: allergy-api-service
            port:
              number: 80
